k3s/manifests/plex/plex.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1  # Allow one pod to go down first
      maxSurge: 0        # Don't try to create extra pods before others die
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: plexinc/pms-docker:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 32400
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
          resources:
            requests:
              cpu: 100m
              memory: 250Mi
            limits:
              cpu: 2000m
              memory: 4Gi
      volumes:
        - name: config
          hostPath:
            path: /fs/lab/data/plex/config
            type: DirectoryOrCreate
        - name: media
          hostPath:
            path: /fs/media
            type: Directory
