k3s/manifests/plex/plex.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  type: NodePort
  selector:
    app: plex
  ports:
    - port: 32400
      targetPort: 32400
      nodePort: 32400
      protocol: TCP
