k3s/manifests/plex/plex.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: plex.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
